tests/good/binop/bool/boolcmp/lesseqthan.go
package main;
import "fmt";

func main(){
	fmt.Print(4<=5)
	fmt.Print("\n")
}

/*
== Expected program output ==
true
*/